--- a/src/components/composite/Header/Header.module.css
+++ b/src/components/composite/Header/Header.module.css
@@ -44,23 +44,29 @@
 /* Mobile menu */
 .mobileMenu {
   display: none;
-  position: absolute;
-  top: 100%;
+  position: fixed;
+  top: calc(var(--space-3) * 2 + 24px);
   left: 0;
   right: 0;
   background: var(--color-black-background);
-  transform-origin: top;
-  transform: translateY(-10px);
+  transform: translateY(-100%);
   opacity: 0;
   transition:
     transform 0.3s ease-out,
-    opacity 0.3s ease-out;
-  z-index: 100;
+    opacity 0.3s ease-out,
+    z-index 0s linear 0.3s;
+  z-index: -1000;
+  border-top: 1px solid var(--color-thin-grey);
 }
 
 .mobileMenu.active {
   transform: translateY(0);
   opacity: 1;
+  z-index: 46;
+  transition:
+    transform 0.3s ease-out,
+    opacity 0.3s ease-out,
+    z-index 0s linear;
 }
 
 /* Update mobile styles */
